instance1/temp-retrieve/objects/DrChrono_Request_Log__c/DrChrono_Request_Log__c.object-meta.xml
<CustomObject>
    <label>Request Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DrChrono Request Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>