instance1/temp-retrieve/objects/DrChrono_Request_Log__c/fields/Request_Headers__c.field-meta.xml
<CustomField>
    <fullName>Request_Headers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>