instance1/temp-retrieve/objects/DrChrono_Request_Log__c/fields/Request_Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Request_Source_IP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Source IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>