instance1/temp-retrieve/objects/DrChrono_Request_Log__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request URL</label>
    <type>Url</type>
</CustomField>