instance1/temp-retrieve/objects/DrChrono_Request_Log__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>