instance1/temp-retrieve/objects/DrChrono_Request_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APEX_Class_Name__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Request_URL__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>